--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "es6-promise": "^4.2.4",
     "grunt": "^1.0.2",
     "grunt-banner": "^0.6.0",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "^20.1.0",
@@ -75,6 +75,7 @@
   "unpkg": "dist/axios.min.js",
   "typings": "./index.d.ts",
   "dependencies": {
+    "ajv": "^6.12.0",
     "follow-redirects": "^1.10.0"
   },
   "bundlesize": [
